--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ a {
   padding: 5px 10px;
   border-radius: 12px;
 }
-.section-1 .Collectibles {
+.section-1 .Collectible {
   color: var(--ButtonColor);
   margin-bottom: 30px;
 }
